Changed product sale and member price block width for mobile responsive issue broken layout

--- a/catalog/view/theme/oxy/stylesheet/vitaminsg.css
+++ b/catalog/view/theme/oxy/stylesheet/vitaminsg.css
@@ -561,9 +561,8 @@ margin-bottom: 10px;
 	
 }
 .product-details-price-block {
-/*width: 40%;*/
-float: left;
-padding-right: 5px;
+	float: left;
+	padding-right: 5px;
 }
 
 .padding-5px {
@@ -593,8 +592,7 @@ color: #00a651;
 .product-details-sale-discount {
 color: #dc911b;
 font-weight: bold;
-padding-left: 5px;
-padding-top: 3px;
+margin-top: 3px;
 }
 span.sale-icon {
 left: inherit;
@@ -696,6 +694,14 @@ padding-left: 15px;
 border: 1px solid #424242;
 border-collapse: collapse;
 }
+
+/*Fixes by: Diovannie*/
+.btn-add-cart-product-page {
+	margin: 7px 0px 0px 5px;
+}
+
+
+/*Media Screen Size queries*/
 @media only screen and (max-width: 1009px)
 {
 	div.premium-member-perks {
@@ -814,7 +820,6 @@ border-collapse: collapse;
 	}
 	.product-details-price-block {
 	width: 35%;
-	width: 35%;
 	text-align: center;
 	}
 	span.sale-icon {
@@ -838,7 +843,7 @@ border-collapse: collapse;
 	margin-right: 15%!important;
 	}
 	.product-details-price-block {
-	width: 45%;
+	width: 100%;
 	}
 	.product-grid .name {
 	height: 70px;
